# devclient

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  dtc-fix-install.patch  dtc-install-fix.patch
config/: config
contrib/filesystem-1.2.10/: CMakeLists.txt
contrib/openocd/: .gitignore
include/: application.hh  device.hh  deviceselect.hh  dtb.hh  eeprom.hh  filesystem.hh  formrow.hh  gpio.hh  i2c.hh  jtag.hh  log.hh  mainwindow.hh  nogui.hh  uart.hh  utils.hh
include/eeprom/: 24c.hh  24c256.hh
package/macos/: CMakeLists.txt  Info.plist
profile/: profile
scripts/: samthedongle-v2.tcl
src/: application.cc  device.cc  deviceselect.cc  dtb.cc  gpio.cc  i2c.cc  jtag.cc  log.cc  main.cc  mainwindow.cc  nogui.cc  uart.cc  utils.cc
src/eeprom/: 24c256.cc  24c32.cc
